--- a/style.css
+++ b/style.css
@@ -1,18 +1,18 @@
 body{
-    background-color: rgb(0, 0, 0);
-    color: red 
+    background-color: white;
+    color: beige
 }
 
 header {
     text-align: center;
     font-size: 100px ;
-    color: rgb(255, 29, 29);
-    border-bottom: solid 5px red;
+    color: rgb(255, 145, 173);
+    border-bottom: solid 5px rgba(255, 127, 195, 0.997);
     font-family: "Noto Sans TC", sans-serif;
 }
 
 section {
-    background-color: rgb(11, 11, 11);
+    background-color: rgb(255, 91, 159);
     padding: 30px;
     margin-top: 10px;
     display: flex;
